name:                sort-traversable

version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Sort arbitrary Traversable containers

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:            https://github.com/treeowl/sort-traversable

-- The license under which the package is released.
license:             BSD2

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              David Feuer

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          DavidFeuer at the google mail domain

-- A copyright notice.
-- copyright:

category:            Data

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:
    ChangeLog.md
  , README.md
  , Laws.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  exposed-modules:
    Data.Traversable.Sort.PairingHeap
    Data.Traversable.Sort.PairingHeap.BasicNat
    Data.Traversable.Sort.PairingHeap.IndexedPairingHeap

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:
      GADTs
    , DataKinds
    , TypeFamilies
    , TypeOperators
    , ScopedTypeVariables
    , RankNTypes
    , InstanceSigs
    , BangPatterns
    , RoleAnnotations

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.10

  -- Directories containing source files.
  -- hs-source-dirs:

  -- Base language which the package is written in.
  default-language:    Haskell2010
